--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,16 @@
 # Site
-title:              Moon
-bio:                'Minimal, one column jekyll theme.'
-description:        "Moon is a minimal, one column jekyll theme for your blog."
+title:              Stephan Zharkov
+bio:                'A personal bioptic of computer science and life.'
+description:        "I don't have much to say."
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:                http://taylantatli.me/Moon
-
+#url:                http://sdzharkov.me
+#url:                http://localhost:3000
+url:                 http://sdzharkov.github.io
 # Jekyll
 permalink:          /:title/
 markdown:           kramdown
