--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@ logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-#url:                http://sdzharkov.me
+url:                https://sdzharkov.me
 #url:                http://localhost:3000
-url:                 https://sdzharkov.github.io
+#url:                 https://sdzharkov.github.io
 # Jekyll
 permalink:          /:title/
 markdown:           kramdown
@@ -40,7 +40,7 @@ disqus_shortname:   sdzharkov
 #bing-verify:
 email:
 #twitter:            username
-facebook:           username
+facebook:           stephan.zharkov
 github:             sdzharkov
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 linkedin:          stephan-zharkov
