--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@ logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:                https://sdzharkov.me
+#url:                https://sdzharkov.me
 #url:                http://localhost:3000
-#url:                 https://sdzharkov.github.io
+url:                 https://sdzharkov.github.io
 # Jekyll
 permalink:          /:title/
 markdown:           kramdown
