--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              Stephan Zharkov
-bio:                'A personal bioptic of computer science and life.'
-description:        "I don't have much to say."
+bio:                'Future Developer and Software Engineer. UC Davis student. This website is still under construction.'
+description:        "Future Developer and Software Engineer. UC Davis student. This website is still under construction."
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
