--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              Stephan Zharkov
-bio:                'Future Developer and Software Engineer. UC Davis student. This website is still under construction.'
-description:        "Future Developer and Software Engineer. UC Davis student. This website is still under construction."
+bio:                'Developer and Software Engineer. UC Davis student.'
+description:        "Developer and Software Engineer. UC Davis student."
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/head4.png'
@@ -38,7 +38,7 @@ disqus_shortname:   sdzharkov
   #ad-client:
   #ad-slot:
 #bing-verify:
-email:
+email:              stephan.zharkov@gmail.com
 #twitter:            username
 facebook:           stephan.zharkov
 github:             sdzharkov
