--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              Stephan Zharkov
 bio:                'Developer and Software Engineer. UC Davis student.'
-description:        "Developer and Software Engineer. UC Davis student."
+description:        "Developer and Software Engineer. UC Davis student. Back-country skier. Thrones enthusiant. Blockchain developer."
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/head5.jpg'
