--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              Stephan Zharkov
-bio:                'Developer and Software Engineer. UC Davis student.'
+bio:                'Developer and Software Engineer. UC Davis student. Back-country skier. Thrones enthusiant. Blockchain developer.'
 description:        "Developer and Software Engineer. UC Davis student. Back-country skier. Thrones enthusiant. Blockchain developer."
 reading_time:       true
 words_per_minute:   200
